--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,6 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- PWA Setup -->
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#3b82f6">
-    <link rel="apple-touch-icon" href="icon-192x192.png">
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -30,8 +25,8 @@
 
             <div style="padding: 20px 20px 0 20px;">
                 <div class="mode-selector">
-                    <button id="mode-reach" class="mode-btn active">Reachability</button>
-                    <button id="mode-route" class="mode-btn">Calculate Distance</button>
+                    <button id="mode-route" class="mode-btn active">Route Planner</button>
+                    <button id="mode-reach" class="mode-btn">Reachability</button>
                     <button id="mode-saved" class="mode-btn">Saved Distances</button>
                 </div>
             </div>
@@ -256,9 +251,8 @@
 
             <!-- Map Layers & New Port Panel (Right Side) -->
             <div class="right-controls-container">
-                <!-- Layers Panel -->
-                <div id="layers-content" class="custom-port-panel hidden" style="width: auto; min-width: 180px;">
-                    <h3 style="margin-top: 0; margin-bottom: 10px;">Map Layers</h3>
+                <div class="map-layers-panel">
+                    <h4>Map Layers</h4>
                     <div class="layer-toggles">
                         <label class="toggle-switch">
                             <input type="checkbox" id="layer-ports-btn">
@@ -272,17 +266,6 @@
                         </label>
                     </div>
                 </div>
-
-                <!-- Layers Button -->
-                <button id="toggle-layers-btn" class="icon-btn" title="Toggle Map Layers" style="align-self: flex-end;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
-                        <polyline points="2 12 12 17 22 12"></polyline>
-                        <polyline points="2 17 12 22 22 17"></polyline>
-                    </svg>
-                    <span>Map Layers</span>
-                </button>
 
                 <button id="cp-toggle-panel-btn" class="icon-btn" title="Add Custom Port" style="align-self: flex-end;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -357,17 +340,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <!-- Custom JS -->
     <script src="main.js"></script>
-
-    <!-- PWA Service Worker Registration -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(reg => console.log('Service Worker registered', reg))
-                    .catch(err => console.error('Service Worker registration failed', err));
-            });
-        }
-    </script>
 </body>
 
 </html>
